редактировал внешний вид, правил баги